--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Pokedex</string>
     <string name="pokemon_search">Search here</string>
+    <string name="pokemon_details_base_stats">Base stats</string>
 </resources>
